front-end changes+phython server updates

--- a/nodeapp/static/index.html
+++ b/nodeapp/static/index.html
@@ -11,17 +11,17 @@
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" />
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Custom styles for this template -->
     <title>My Page</title>
 </head>
 
 <body>
     <div class="header">
-            <img src="/static/assets/logo.png"/><label class="header-text"><span class="edge-span">Edge</span> vs <span class="cloud-span">Cloud</span></label>
+            <img src="./assets/logo.png"/><label class="header-text"><span class="edge-span">Edge</span> vs <span class="cloud-span">Cloud</span></label>
         </div>
     <div class="cloud-strip">
-        <img src="/static/assets/cloud-wh.png" /><span>Cloud</span>
+        <img src="./assets/cloud-wh.png" /><span>Cloud</span>
     </div>
     <main role="main" class="container">
         <div class="video-container">
@@ -52,8 +52,8 @@
             </div>
         </div>
     </main><!-- /.container -->
-    <script src="/static/cloud.js"></script>
-    <script id="objDetect" src="/static/objDetectCloud.js" data-source="cloudVideo" data-mirror="true" data-uploadWidth="640"
+    <script src="./cloud.js"></script>
+    <script id="objDetect" src="./objDetectCloud.js" data-source="cloudVideo" data-mirror="true" data-uploadWidth="640"
         data-scoreThreshold="0.40"></script>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </body>
