--- a/FlaskObjectDetectionEdge/static/local.html
+++ b/FlaskObjectDetectionEdge/static/local.html
@@ -29,7 +29,7 @@
         <span id="edge-hostname" class="edge-hostname"></span>
         <span id="edge-ip-address"></span>
       </div>
-      <div>
+      <!-- <div>
         <div class="edge-strip">
           <img src="/static/assets/edge-wh.png" /><span>Edge</span>
         </div>
@@ -40,7 +40,7 @@
             onclick="changeCamera()"
           />
         </div>
-      </div>
+      </div> -->
 
       <!-- <p class="header_text">Emotion Detection</p> -->
     </div>
@@ -62,13 +62,13 @@
               <span class="time-bold">Request/Responses</span>
             </div>
             <div class="col-xs-3 col-sm-2 metric-header">
-              <span class="time-metric">Min</span>
+              <span class="time-bold">Min</span>
             </div>
             <div class="col-xs-3 col-sm-2 metric-header">
-              <span class="time-metric">Avg</span>
+              <span class="time-bold">Avg</span>
             </div>
             <div class="col-xs-3 col-sm-2 metric-header">
-              <span class="time-metric">Max</span>
+              <span class="time-bold">Max</span>
             </div>
           </div>
           <!-- <div class="row clear-margin">
